k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'

spec:
  tls:
    - hosts:
        - rodneyshafar.com
        - www.rodneyshafar.com
      secretName: k8s-multi.com
  rules: #this says where to route everything. if / go to 3000, if /api/ go to 5000
    - host: rodneyshafar.com
       http:
       paths:
        - path: /?(.*)
          backend:
            serviceName: client-cluster-ip-service #from the client clusterIP object
            servicePort: 3000 #from client clusterIP
        - path: /api/?(.*)
          backend:
            serviceName: server-cluster-ip-service #from server ClusterIP
            servicePort: 5000 #from server ClusterIP
    - host: www.rodneyshafar.com
       http:
       paths:
        - path: /?(.*)
          backend:
            serviceName: client-cluster-ip-service #from the client clusterIP object
            servicePort: 3000 #from client clusterIP
        - path: /api/?(.*)
          backend:
            serviceName: server-cluster-ip-service #from server ClusterIP
            servicePort: 5000 #from server ClusterIP
